Pakete mit Projekten verschmolzen, Adminpanel um Rollen erweitert

--- a/IvA/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,7 +1,14 @@
 ﻿@{
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
-
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Collab</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="shortcut icon" href="~/favicon.ico" />
+</head>
 <h1>Accountverwaltung</h1>
 
 <div>
