--- a/IvA/Views/ArbeitsPaket/Create.cshtml
+++ b/IvA/Views/ArbeitsPaket/Create.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <input asp-for="Status" class="form-control" placeholder="To do" disabled=""/>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
