--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListUsers">Nutzerverwaltung</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListRoles">Rollenübersicht</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListProjects">Projekteverwaltung</a>
                                 </div>
                             </li>
                         }
