--- a/IvA/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/IvA/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    //Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    Layout = "/Views/Shared/_Layout.cshtml";
+
 }
 <head>
     <meta charset="utf-8" />
