--- a/IvA/Views/ProjektPakete/Index.cshtml
+++ b/IvA/Views/ProjektPakete/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+    <a asp-action="Chat">Chat</a>
+</p>
 <table class="table">
     <thead>
         <tr>
