image clear background

--- a/IvA/Views/Home/Index.cshtml
+++ b/IvA/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@ ViewData["Title"] = "Collab - Follow your Project";
 <div class="text-center">
     <h1 class="display-4">Willkommen</h1>
     <p>im besten Projektmanagement System aller Zeiten.</p>
-    <img src="~/img/Collab.png" alt="lul">
+    <img src="~/img/COLLAB_Final-removebg-preview.png" alt="lul">
 </div>
 
