--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -56,16 +56,55 @@
             </dd>
         </dl>
         <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Projekte.ProjekteId">Anpassen</a>
+        <a class="btn btn-primary" asp-action="ProjectUserList" asp-route-id="@item.Projekte.ProjekteId">Nutzer hinzufügen</a>
         <a class="btn btn-primary" asp-action="Index">Zurück zur Projektübersicht</a>
-    }
+        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Projekte.ProjekteId">Projekt löschen</a>
+   }
 </div>
 <div>
     
 </div>
-<h2>Arbeitspakete</h2>
 <p>
-    <a asp-controller="ArbeitsPaket" asp-action="Create">Neues Paket erstellen</a>
+    <h2>Arbeitspakete</h2>
 </p>
+
+<p>
+    ​<button class="btn btn-primary" onclick="showPackageForm()">Neues Arbeitspaket anlegen</button>
+    <button class="btn btn-primary" onclick="showMemberForm()">Mitglied hinzufügen</button>
+</p>
+<div id="newPackageForm" style="display: none;">
+    <div class="form-group">
+        <label class="control-label">Name</label>
+        <input class="form-control" />
+        <span class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Beschreibung</label>
+        <input class="form-control" />
+        <span class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Frist</label>
+        <input class="form-control" />
+        <span class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <a class="btn btn-primary" asp-action="CreatePackage">Erstellen</a>
+    </div>
+</div>
+<form asp-action="AddUserToProject" id="addMemberForm" style="display: none;">
+    <div class="form-group">
+        <label class="control-label">Name</label>
+        <input class="form-control" id="nameInput" />
+        <span class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <a class="btn btn-primary" asp-controller="Projekte" >Hinzufügen</a>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Änderungen speichern" class="btn btn-primary" />
+    </div>
+</form>
 <div class="card-deck">
     <div class="card bg-secondary">
         <div class="card-body">
@@ -113,3 +152,6 @@
         </div>
     </div>
 </div>
+<p>
+    <h2>Mitglieder</h2>
+</p>
