--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayFor(model => item.Projekte.Projektname)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Projekte.Projektersteller)
+                Projektowner
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => item.Projekte.Projektersteller)
