Controller für UserLogin, MEssage und UserLoginMessageViewModel hinzugefügt

--- a/IvA/Views/Shared/_Layout.cshtml
+++ b/IvA/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="ArbeitsPaket" asp-action="Index">Pakete</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="UserLogin" asp-action="Index">Chat</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="ProjektPakete" asp-action="Index">Projekt Pakete</a>
                             </li>
                             <li class="nav-item dropdown">
