--- a/IvA/wwwroot/css/site.css
+++ b/IvA/wwwroot/css/site.css
@@ -167,3 +167,142 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* CSS PARA EL CHAT*/
+.systemChat {
+    background: #ffffff;
+    height: 50%;
+    float: right;
+    position: absolute;
+    bottom: 2px;
+    left: 1px;
+    clear: right;
+    z-index: 99;
+}
+
+.columna {
+    margin-right: 1px;
+    background: #ffffff;
+    height: 100%;
+    width: 250px;
+    border-radius: 10px;
+    border: solid 1px #808080;
+    float: left;
+    padding: 5px 25px;
+}
+
+.user_chat_list {
+    cursor: pointer;
+    padding: 5px;
+    display: inline;
+    width: 100%;
+    border-top: solid 1px rgba(0, 0, 0, .05);
+}
+
+    .user_chat_list:hover {
+        font-weight: bold;
+    }
+
+.message {
+    max-width: 100%;
+    box-sizing: border-box;
+    background: #fff;
+    padding: 5px;
+    margin: 0px 0px 3px 0px;
+    display: inline-block;
+    clear: both;
+    font-size: 14px;
+    font-style: italic;
+    color: #4C4848;
+    word-wrap: all;
+    word-wrap: break-word;
+    border: 1px solid #b2acac;
+    width: 100%;
+    border: solid 2px orange;
+    box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.7) !important;
+}
+
+    .message div {
+        display: inline;
+    }
+
+    .message .strong {
+        color: #22bce0;
+        font-size: 12px;
+        cursor: pointer;
+        font-size: 16px;
+        padding-right: 3px;
+    }
+
+.msg_ser {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    font-family: 'oswald';
+    float: right;
+    right: 0px;
+}
+
+.msg_cli {
+    font-family: 'oswald';
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    float: left;
+    left: 0px;
+}
+.messages{
+    width:100%;
+    max-height: 230px;
+    overflow-y:auto;
+}
+
+.userlog{
+    width: 100%;
+
+}
+.transparente {
+    background: rgba(255, 255, 255, 0);
+}
+.close_message{
+    position:absolute;
+    right:10px;
+    top:3px;
+    cursor:pointer;
+}
+
+.close_user {
+    position: absolute;
+    right:260px;
+    padding-right:5px;
+    top: 3px;
+    cursor: pointer;
+}
+
+
+.close_user2 {
+    position: absolute;
+    right: 7px;
+    padding-right: 5px;
+    top: 3px;
+    cursor: pointer;
+}
+
+.close_user3 {
+    position: absolute;
+    right: 7px;
+    padding-right: 5px;
+    top: 3px;
+    cursor: pointer;
+}
+
+.user_min {
+    margin-right: 1px;
+    background: #ffffff;
+    height: 20%;
+    width: 50px;
+    border-radius: 10px;
+    border: solid 1px #808080;
+    float: left;
+    padding: 5px 25px;
+}
