git add . MAJOR UPDATE git add .
ProjekteArbeitsPaketeViewModelController gelöscht

Arbeitspakete können jetzt mit Hilfe des Projektecontrollers erstellt und bearbeitet werden. Der ArbeitsPaketController ist nun überflüssig

Html-Seiten für das Erstellen und Bearbeiten von Arbeitspaketen angepasst

Arbeitspakete werden jetzt dem richtigen Projekt zugeordnet und angezeigt.

die Kombinationstabelle ProjekteArbeitsPaketeViewModel wird jetzt mit den richtigen Werten für ProjektID und arbeitspaket ID befüllt

--- a/IvA/Views/Home/Impressum.cshtml
+++ b/IvA/Views/Home/Impressum.cshtml
@@ -10,4 +10,5 @@
     <p>Philipp Rutz - 1366736</p>
     <p>Sergen Günesdogan - 1477438</p>
     <p>Martin Marburger - 1230611</p>
+    <p>Ivan Quispe Choque - 1477256 </p>
 </div>
