--- a/IvA/Views/Projekte/Create.cshtml
+++ b/IvA/Views/Projekte/Create.cshtml
@@ -39,15 +39,16 @@
                 <input asp-for="Status" type="hidden" class="form-control" />                                 
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Projekt erstellen" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Zurück zur Projektübersicht</a>
 </div>
 
 @section Scripts {
