--- a/IvA/Views/Projekte/PaketAnpassen.cshtml
+++ b/IvA/Views/Projekte/PaketAnpassen.cshtml
@@ -1,20 +1,22 @@
 ﻿@model IvA.Models.ArbeitsPaketModel
 
-@{
-    ViewData["Title"] = "Edit";
-}
+@{ 
+    ViewData["Title"] = "Arbeitspaket anpassen";
+ }
 
-<h1>Edit</h1>
+<h1>Passen sie die Details des Arbeitspaketes an</h1>
 
-<h4>ArbeitsPaket</h4>
+
+<br />
+
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="PaketAnpassen">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ArbeitsPaketId" />
             <div class="form-group">
-                <input asp-for="ProjektId" type ="hidden" class="form-control" />
+                <input asp-for="ProjektId" type="hidden" class="form-control" />
                 <span asp-validation-for="ProjektId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,14 +49,14 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Änderungen speichern" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Zurück zur Projektübersicht</a>
 </div>
 
 @section Scripts {
