--- a/IvA/Views/Projekte/PaketDetails.cshtml
+++ b/IvA/Views/Projekte/PaketDetails.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IvA.Models.ArbeitsPaketModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+@{ ViewData["Title"] = "Arbeitspaketdetails"; }
 
 <h1>Details</h1>
+<br />
+
+<h4> Arbeitspaket: @Html.DisplayFor(model => model.PaketName)</h4>
 
 <div>
-    <h4>ArbeitsPaket</h4>
+    
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -48,10 +49,9 @@
         </dd>
     </dl>
 </div>
+
 <div>
-    <h4>Test</h4>
-</div>
-<div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.ArbeitsPaketId">Bearbeiten</a> |
-    <a class="btn btn-primary" asp-action="Index">Zurück</a>
+    <a class="btn btn-primary" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.ArbeitsPaketId">Bearbeiten</a> |
+    <a class="btn btn-primary" asp-action="Index" asp-controller="Projekte">Zurück zur Projektübersicht</a> |
+    <a class="btn btn-primary" asp-action="PaketLöschenGet" asp-controller="Projekte" asp-route-id="@Model.ArbeitsPaketId">Arbeitspaket löschen</a>
 </div>
