--- a/IvA/Views/Projekte/PaketErstellen.cshtml
+++ b/IvA/Views/Projekte/PaketErstellen.cshtml
@@ -1,42 +1,41 @@
-﻿@model IvA.Models.ProjektPaketeModel
+﻿@model IvA.Models.ArbeitsPaketModel
 
-@{ ViewData["Title"] = "CreatePackage"; }
+@{ ViewData["Title"] = "Arbeitspaket erstellen"; }
 
 <h1>Arbeitspakete erstellen</h1>
-
-<h4>ArbeitsPaket</h4>
+<br />
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="PaketErstellen">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Pakete.PaketName" class="control-label"></label>
-                <input asp-for="Pakete.PaketName" class="form-control" />
-                <span asp-validation-for="Pakete.PaketName" class="text-danger"></span>
+                <label asp-for="PaketName" class="control-label"></label>
+                <input asp-for="PaketName" class="form-control" />
+                <span asp-validation-for="PaketName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Pakete.Beschreibung" class="control-label"></label>
-                <input asp-for="Pakete.Beschreibung" class="form-control" />
-                <span asp-validation-for="Pakete.Beschreibung" class="text-danger"></span>
+                <label asp-for="Beschreibung" class="control-label"></label>
+                <input asp-for="Beschreibung" class="form-control" />
+                <span asp-validation-for="Beschreibung" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Pakete.Mitglieder" class="control-label"></label>
-                <input asp-for="Pakete.Mitglieder" class="form-control" />
-                <span asp-validation-for="Pakete.Mitglieder" class="text-danger"></span>
+                <label asp-for="Mitglieder" class="control-label"></label>
+                <input asp-for="Mitglieder" class="form-control" />
+                <span asp-validation-for="Mitglieder" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Pakete.Frist" class="control-label"></label>
-                <input asp-for="Pakete.Frist" class="form-control" />
-                <span asp-validation-for="Pakete.Frist" class="text-danger"></span>
+                <label asp-for="Frist" class="control-label"></label>
+                <input asp-for="Frist" class="form-control" />
+                <span asp-validation-for="Frist" class="text-danger"></span>
             </div>
             <div class="form-group">
-              <label asp-for="Pakete.Status" class="control-label"></label>
-              <input asp-for="Pakete.Status" class="form-control" placeholder="To do" disabled="" />
-              <span asp-validation-for="Pakete.Status" class="text-danger"></span>
+              <label asp-for="Status" class="control-label"></label>
+              <input asp-for="Status" class="form-control" placeholder="To do" disabled="" />
+              <span asp-validation-for="Status" class="text-danger"></span>
              </div>
             <div class="form-group">
-                <input type="submit" value="CreatePackage" class="btn btn-primary" />
+                <input type="submit" value="Arbeitspaket erstellen" class="btn btn-primary" />
             </div>
         </form>
     </div>
