--- a/IvA/Views/Projekte/PaketLöschenGet.cshtml
+++ b/IvA/Views/Projekte/PaketLöschenGet.cshtml
@@ -1,13 +1,12 @@
 ﻿@model IvA.Models.ArbeitsPaketModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+@{ ViewData["Title"] = "Arbeitspaket löschen"; }
 
-<h1>Details</h1>
+<h1>Arbeitspaket löschen</h1>
 
+<h3>Möchten sie dieses Arbeitspaket wirklich löschen?</h3>
 <div>
-    <h4>ArbeitsPaket</h4>
+    <br />
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -15,12 +14,6 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PaketName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProjektId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProjektId)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Beschreibung)
@@ -47,11 +40,10 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
-</div>
-<div>
-    <h4>Test</h4>
-</div>
-<div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.ArbeitsPaketId">Bearbeiten</a> |
-    <a class="btn btn-primary" asp-action="Index">Zurück</a>
+
+    <form asp-action="PaketLöschenGet">
+        <input type="hidden" asp-for="ArbeitsPaketId" />
+        <input type="submit" value="Arbeitspaket löschen" class="btn btn-danger" /> |
+        <a asp-action="Index">Zurück zur Projektübersicht</a>
+    </form>
 </div>
