--- a/IvA/Views/Projekte/PaketDetails.cshtml
+++ b/IvA/Views/Projekte/PaketDetails.cshtml
@@ -52,6 +52,7 @@
 
 <div>
     <a class="btn btn-primary" asp-action="PaketAnpassen" asp-controller="Projekte" asp-route-id="@Model.ArbeitsPaketId">Bearbeiten</a> |
+    <a class="btn btn-primary" asp-action="PackageUserList" asp-controller="Projekte" asp-route-id="@Model.ArbeitsPaketId">Mitglieder</a> |
     <a class="btn btn-primary" asp-action="Index" asp-controller="Projekte">Zurück zur Projektübersicht</a> |
     <a class="btn btn-primary" asp-action="PaketLöschenGet" asp-controller="Projekte" asp-route-id="@Model.ArbeitsPaketId">Arbeitspaket löschen</a>
 </div>
