--- a/IvA/Views/Projekte/PackageUserList.cshtml
+++ b/IvA/Views/Projekte/PackageUserList.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "PackageUserList";
 }
 
-<h1>PackageUserList</h1>
+<h1>Zugewiesene Mitarbeiter zum Arbeitspaket</h1>
 
 <p><a class="btn btn-primary" asp-action="AddUserToPackage" asp-controller="Projekte">Mitglied hinzufügen</a></p>
 <table class="table">
