--- a/IvA/Views/Projekte/Details.cshtml
+++ b/IvA/Views/Projekte/Details.cshtml
@@ -4,7 +4,7 @@
 
 <h1>Übersicht über die Projektdetails</h1>
 
-<div>
+<div>W
     <h4>Projekte</h4>
     <br />
 
@@ -65,50 +65,7 @@
             <a class="btn btn-primary" asp-action="PaketErstellen" asp-route-id="@item.Projekte.ProjekteId">Arbeitspaket erstellen</a>
             <br />
         </div>}
-
 </div>
-<!--
-<p>
-    <h2>Arbeitspakete</h2>
-</p>
-
-<p>
-    ​<button class="btn btn-primary" onclick="showPackageForm()">Neues Arbeitspaket anlegen</button>
-    <button class="btn btn-primary" onclick="showMemberForm()">Mitglied hinzufügen</button>
-</p>
-<div id="newPackageForm" style="display: none;">
-    <div class="form-group">
-        <label class="control-label">Name</label>
-        <input class="form-control" />
-        <span class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="control-label">Beschreibung</label>
-        <input class="form-control" />
-        <span class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label class="control-label">Frist</label>
-        <input class="form-control" />
-        <span class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <a class="btn btn-primary" asp-action="CreatePackage">Erstellen</a>
-    </div>
-</div>
-<form asp-action="AddUserToProject" id="addMemberForm" style="display: none;">
-    <div class="form-group">
-        <label class="control-label">Name</label>
-        <input class="form-control" id="nameInput" />
-        <span class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <a class="btn btn-primary" asp-controller="Projekte" >Hinzufügen</a>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Änderungen speichern" class="btn btn-primary" />
-    </div>
-</form>-->
 <div class="card-deck">
     <div class="card bg-secondary">
         <div class="card-body">
@@ -118,9 +75,10 @@
                 {
                     if (item.Pakete.Status == "To do")
                     {
-    <li class="list-group-item list-group-item-light">
-        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
-    </li>}
+                        <li class="list-group-item list-group-item-light">
+                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
+                        </li>
+                    }
                 }
             </ul>
         </div>
@@ -133,9 +91,10 @@
                 {
                     if (item.Pakete.Status == "In Bearbeitung")
                     {
-    <li class="list-group-item list-group-item-light">
-        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
-    </li>}
+                        <li class="list-group-item list-group-item-light">
+                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
+                        </li>
+                    }
                 }
             </ul>
         </div>
@@ -148,9 +107,10 @@
                 {
                     if (item.Pakete.Status == "Fertig")
                     {
-    <li class="list-group-item list-group-item-light">
-        <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
-    </li>}
+                        <li class="list-group-item list-group-item-light">
+                            <a asp-action="PaketDetails" asp-controller="Projekte" asp-route-id="@item.Pakete.ArbeitsPaketId">@item.Pakete.PaketName</a>
+                        </li>
+                    }
                 }
             </ul>
         </div>
@@ -159,6 +119,29 @@
 <p>
     <h2>Mitglieder</h2>
 </p>
-
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                Optionen
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    
+                </td>
+                <td>
+                    
+                </td>
+            </tr>
+        }
+    </tbody>
 
 
